# Medical_Imaging_Detection

./: .gitignore  README.md  conclusion.md  pyproject.toml  requirements.txt
configs/: default.yaml  model_card.yaml  vinbig15.yaml
data/demo_cases/: manifest.csv
docs/: ARCHITECTURE.md
scripts/: generate_demo_cases.py  optimize_ensemble_weight.py  test_pretrained.py
src/: app.py
src/xray_abnormal/: analysis.py  calibration.py  clinical_evidence.py  data.py  detectors.py  ensemble.py  gradcam.py  infer.py  localization.py  model.py  pretrained.py  report.py  train.py  utils.py
src/xray_abnormal_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
